# mai_oop_3

./: .clang-format  .clang-tidy  .gitignore  LINTING.md  README.md  lint_all.bat
lab_3/: CMakeLists.txt
lab_3/include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  triangle.hpp
lab_3/src/: array.cpp  figure.cpp  hexagon.cpp  main.cpp  octagon.cpp  triangle.cpp
lab_3/tests/: test_array.cpp  test_hexagon.cpp  test_octagon.cpp  test_triangle.cpp
